fixed address contact links left side gap, removed formatting border

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    border: 0;
     font: inherit;
     padding: 0;
     margin: 1%;
@@ -56,7 +56,7 @@ nav a {
     display: flex;
     justify-content: space-around;
     margin: auto;
-    width: 50%;
+    width: 70%;
 }
 
 #innovation {
@@ -115,6 +115,10 @@ nav a {
 
 footer {
     margin-top: 10%;
+}
+
+address a {
+    margin-left: -0.1%;
 }
 
 h6 {
